*Empty MediaWiki Message*

--- a/Feyenoord.mw
+++ b/Feyenoord.mw
@@ -3,36 +3,26 @@
 |nomestemma = Feyenoord-1-.png‎
 |soprannomi = ▪ Stadionclub
 ▪ De Trots van Zuid <br /> ▪ De club van het volk
-| pattern_la1      =_feyenoord1011h
-| pattern_b1       =_feyenoordh2010
-| pattern_ra1      =_aut10h
-| pattern_sh1      =_feyenoord1011h
-| pattern_so1      =_puma_2010_redwhite
+| pattern_la1      =_thinredborder
+| pattern_b1       =_feyenoord1112h
+| pattern_ra1      =_thinwhiteborder
+| pattern_sh1      =
+| pattern_so1      =
 | leftarm1         =FFFFFF
 | body1            =FFFFFF
 | rightarm1        =FF0000
 | shorts1          =000000
 | socks1           =000000
-| pattern_la2      =_feyenoord1011a
-| pattern_b2       =_feyenoorda2010
-| pattern_ra2      =_feyenoord1011a
-| pattern_sh2      =_feyenoord1011a
-| pattern_so2      =_puma_2010_redblack
-| leftarm2         = FFFFFF
-| body2            = FFFFFF
-| rightarm2        = FFFFFF
-| shorts2          = FFFFFF
-| socks2           = FFFFFF
-| pattern_la3      =_thinblackborder
-| pattern_b3       =_Tottenhamaway0910stripe
-| pattern_ra3      =_thinblackborder
-| pattern_sh3      =
-| pattern_so3      =
-| leftarm3         = EEDD88 
-| body3            = EEDD88
-| rightarm3        = EEDD88
-| shorts3          = EEDD88
-| socks3           = EEDD88
+| pattern_la2      =
+| pattern_b2       =_feyenoord1112a
+| pattern_ra2      =
+| pattern_sh2      =
+| pattern_so2      =
+| leftarm2         = 99d9ea
+| body2            = 99d9ea
+| rightarm2        = 99d9ea
+| shorts2          = 000
+| socks2           = 99d9ea
 terza divisa=Sconosciuta|nome della terza divisa
 |nazione= {{Bandiera|Bakrakondre}} [[Bakrakondre]]
 |campionato = [[Eredivisie]]
