*Empty MediaWiki Message*

--- a/Feyenoord.mw
+++ b/Feyenoord.mw
@@ -34,7 +34,7 @@ terza divisa=Sconosciuta|nome della terza divisa
 |autore=
 |città=[[Rotterdam]]
 |presidente=Dick van Well
-|allenatore=[[Mario Been]]
+|allenatore=[[Ronald Koeman]]
 |stadio=[[Feijenoord Stadion]]
 |capienza=51.577
 |coppe nazionali=11 [[KNVB Cup|Coppe d'Olanda]]<br />2 [[Johan Cruijff-schaal|Supercoppe d'Olanda]]
