--- a/Kondre_Makandrameki.mw
+++ b/Kondre_Makandrameki.mw
@@ -96,7 +96,7 @@ A '''Kondre Makandrameki''' e ben wan [[kondre]] ini [[Amrika]]. A kondre e ben 
 [[ceb:Estados Unidos]]
 [[chr:ᎠᎹᏰᏟ]]
 [[chy:United States]]
-[[ckb:وڵاتە یەکگرتووەکان]]
+[[ckb:ویلایەتە یەکگرتووەکان]]
 [[co:Stati Uniti d'America]]
 [[crh:Amerika Qoşma Ştatları]]
 [[cs:Spojené státy americké]]
@@ -120,6 +120,7 @@ A '''Kondre Makandrameki''' e ben wan [[kondre]] ini [[Amrika]]. A kondre e ben 
 [[eu:Ameriketako Estatu Batuak]]
 [[ext:Estaus Unius]]
 [[fa:ایالات متحده آمریکا]]
+[[ff:Dowlaaji Dentuɗi]]
 [[fi:Yhdysvallat]]
 [[fiu-vro:Ameeriga Ütisriigiq]]
 [[fo:USA]]
