--- a/Ropa.mw
+++ b/Ropa.mw
@@ -180,7 +180,7 @@ Image:Cabo da Roca - Sintra - 060415 19.JPG|Cabo da Roca ini [[Portugesokondre]]
 [[gl:Europa]]
 [[glk:اوروپپا]]
 [[gn:Europa]]
-[[got:𐌰𐌹𐍅𐍂𐍉𐍀𐌰/Aiwropa]]
+[[got:𐌰𐌹𐍅𐍂𐍉𐍀𐌰]]
 [[gu:યુરોપ]]
 [[gv:Yn Oarpey]]
 [[ha:Tūrai]]
