--- a/Bakrakondre_fubal_pluga.mw
+++ b/Bakrakondre_fubal_pluga.mw
@@ -16,9 +16,8 @@
 |leftarm1=FF5f00|body3=FF5f00|rightarm3=FF5f00|shorts3=FF5f00|socks3=FF5f00|title=Speciaal|
 
   
-  First game         = Belgikondre 1 - 3 Bakrakondre<br /><small>[[Belgikondre]]; [[30 fosfor]] [[1905]] |
-  Largest win        = Bakrakondre 9 - 0 Finkondre <br /><small>[[Stockholm]]; [[4 fosseybi]] [[1912]]</small><br/>Bakrakondre 9 - 0 Norvegikondre <br /><small>[[Rotterdam]], [[Bakrakondre]]; [[1 foserfu]] [[1972]]</small> |
-
+  First game         = Belgikondre 1 - 4 Bakrakondre<br /><small>[[Belgikondre]]; [[30 fosfor]] [[1905]] |
+  Largest win        = Bakrakondre 11 - 0 San Marino <br /><small>[[Eindhoven]]; [[2 Fosneygi]] [[2011]]</small> |
   Largest loss       = Ingriskondre 12 - 2 Bakrakondre<br /><small>[[Darlington]], [[Ingriskondre]]; [[21 fostwarfu]] [[1907]]</small> |
  World cup apps = 9 |
  World cup first = 1934 |
