r2.6.5) (Robot: toegevoegd: [[av:Гьой]]

--- a/Dagu.mw
+++ b/Dagu.mw
@@ -67,6 +67,7 @@ Wan '''dagu''' ben wan [[bobowatrameti]]. A dagu ben wan rofumeti.
 [[arc:ܟܠܒܐ]]
 [[arz:كلب]]
 [[ast:Perru]]
+[[av:Гьой]]
 [[ay:Anu]]
 [[az:Köpək]]
 [[ba:Эт]]
