--- a/Opo_Kondremam.mw
+++ b/Opo_Kondremam.mw
@@ -1,25 +1,24 @@
 '''''1ª ini [[Bakratongo]]:'''''
 
-God zij met ons Suriname <br/>
-Hij verheff'ons heerlijk land <br/>
-Hoe wij hier ook samen kwamen <br/>
-Aan zijn grond zijn wij verpand <br/>
-Werkend houden w'in gedachten <br/>
-Recht en waarheid maken vrij <br/>
-Al wat goed is te betrachten <br/>
-Dat geeft aan ons land waardij 
-
+:''God zij met ons Suriname
+:''Hij verheff' ons heerlijk land
+:''Hoe wij hier ook samen kwamen
+:''Aan zijn grond zijn wij verpand
+:''Werkend houden w' in gedachten
+:''Recht en waarheid maken vrij
+:''Al wat goed is te betrachten
+:''Dat geeft aan ons land waardij.
 
 '''''2ª ini [[Sranantongo]]:'''''
 
-Opo, kondreman un opo! <br/>
-Sranangron e kari un. <br/>
-Wans ope tata komopo <br/>
-Wi mu seti kondre bun. <br/>
-Stre def stre, wi no sa frede. <br/>
-Gado de wi fesiman. <br/>
-Heri libi, te na dede <br/>
-Wi sa feti, gi Sranan!
+:''Opo, kondreman un opo
+:''Sranangron e kari un
+:''Wans ope tata komopo
+:''Wi mu seti kondre bun.
+:''Stre def stre, wi no sa frede
+:''Gado de wi fesiman.
+:''Eri libi, te na dede
+:''Wi sa feti, gi Sranan.
 
 [[ar:فليكن الله معنا سورينام]]
 [[de:God zij met ons Suriname]]
