*Empty MediaWiki Message*

--- a/Desi_Bouterse.mw
+++ b/Desi_Bouterse.mw
@@ -1,1 +1,33 @@
-#STIR [[Dési Bouterse]]
+[[Gefre:President Bouterse.JPG|thumb|right|Dési Bouterse]]
+'''Desiré Delano "Dési" Bouterse''' ([[Domburg]], Fosten dey 13, 1945) e ben wan presidenti fu [[Sranankondre]]. 
+
+{{Stub}}
+
+[[Category:Srananman]]
+[[Category:Srananpresidenti]]
+
+[[af:Dési Bouterse]]
+[[ar:ديزي بوترس]]
+[[be:Дэзі Баўтэрсэ]]
+[[de:Dési Bouterse]]
+[[el:Ντέσι Μπουτέρσε]]
+[[en:Dési Bouterse]]
+[[eo:Dési Bouterse]]
+[[es:Dési Bouterse]]
+[[et:Dési Bouterse]]
+[[fi:Dési Bouterse]]
+[[fr:Dési Bouterse]]
+[[fy:Desi Bouterse]]
+[[he:דזי בוטרזה]]
+[[hi:डेसी बोउटर्सी]]
+[[id:Desi Bouterse]]
+[[it:Dési Bouterse]]
+[[ka:დეზი ბაუტერსე]]
+[[ko:데시 바우테르서]]
+[[lt:Dési Bouterse]]
+[[nl:Desi Bouterse]]
+[[pl:Dési Bouterse]]
+[[pt:Dési Bouterse]]
+[[ru:Баутерсе, Дези]]
+[[tr:Dési Bouterse]]
+[[yo:Dési Bouterse]]
