*Empty MediaWiki Message*

--- a/Desi_Bouterse.mw
+++ b/Desi_Bouterse.mw
@@ -1,5 +1,5 @@
-[[Gefre:President Bouterse.JPG|thumb|right|Dési Bouterse]]
-'''Desiré Delano "Dési" Bouterse''' ([[Domburg]], Fosten dey 13, 1945) e ben wan presidenti fu [[Sranankondre]]. 
+[[Gefre:President Bouterse.JPG|thumb|right|Desi Bouterse]]
+'''Desiré Delano "Desi" Bouterse''' ([[Domburg]], Fosten dey 13, 1945) e ben wan presidenti fu [[Sranankondre]]. 
 
 {{Stub}}
 
